bad/bin_op_and_class_bool.example_compiler_output
ERROR
[1mbad/bin_op_and_class_bool.lat:5:8: [1;31merror: [0;1moperator && is defined only for `boolean` values, not `Y` and `boolean`[m
	new Y && true;
	      [1;32m^[m
